# prefect-agent-orchestration

./: .dockerignore  .gitignore  .po-env  AGENTS.md  CLAUDE-po-director.md  CLAUDE-software-dev.md  CLAUDE.md  Dockerfile  Dockerfile.pack  INDEX.md  Makefile  README.md  TODO.md  docker-compose.yml  pyproject.toml
.beads/: issues.jsonl  metadata.json
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/logs/: diagnostics.jsonl  session-events.jsonl
.claude/packs/: CLAUDE-po-director.md  CLAUDE-software-dev.md
.planning/prefect-orchestration-3dg/: prefect-orchestration-3dg-baseline.txt  prefect-orchestration-3dg-lessons-learned.md  prefect-orchestration-3dg-verification-report.md
.planning/prefect-orchestration-4xo/: prefect-orchestration-4xo-verification-report.md
.planning/prefect-orchestration-5wk.4/: prefect-orchestration-5wk.4-verification-report.md
.planning/prefect-orchestration-5wk.6/: prefect-orchestration-5wk.6-verification-report.md
.planning/prefect-orchestration-7vs.2/: prefect-orchestration-7vs.2-baseline.txt  prefect-orchestration-7vs.2-decision-log.md  prefect-orchestration-7vs.2-implementation-summary.md  prefect-orchestration-7vs.2-lessons-learned.md  prefect-orchestration-7vs.2-plan.md  prefect-orchestration-7vs.2-verification-report.md
.planning/prefect-orchestration-7vs.3/: prefect-orchestration-7vs.3-baseline.txt  prefect-orchestration-7vs.3-decision-log.md  prefect-orchestration-7vs.3-implementation-summary.md  prefect-orchestration-7vs.3-lessons-learned.md  prefect-orchestration-7vs.3-plan.md  prefect-orchestration-7vs.3-verification-report.md
.planning/prefect-orchestration-7vs.4/: prefect-orchestration-7vs.4-baseline.txt  prefect-orchestration-7vs.4-decision-log.md  prefect-orchestration-7vs.4-implementation-summary.md  prefect-orchestration-7vs.4-lessons-learned.md  prefect-orchestration-7vs.4-plan.md  prefect-orchestration-7vs.4-verification-report.md
.planning/prefect-orchestration-7vs.5/: baseline.txt  prefect-orchestration-7vs.5-decision-log.md  prefect-orchestration-7vs.5-implementation-summary.md  prefect-orchestration-7vs.5-plan.md  (+2 more)
claude-context/: .gitkeep
docker/: entrypoint.sh
engdocs/: account-policy.md  agent-step-adoption.md  attach.md  auth.md  bead-naming-conventions.md  cloud-envs.md  cloud-smoke.md  creating-artifacts.md  example-formulas.md  explicit-runtime-dispatch.md  formula-modes.md  gc-comparison.md  graph-mode-patterns.md  minimal-task.md  pack-convention.md  pack-deprecation.md  pause-and-input.md  primitives.md  principles.md  rate-limits.md  roadmap-first-planning.md  separation.md  skill-evals.md  snakes-demo.md  verdict-channel-backends.md  work-pools.md
examples/packs/po-stripe/: pyproject.toml
examples/packs/po-stripe/overlay/: CLAUDE.md
examples/packs/po-stripe/po_stripe/: checks.py
examples/scaffold/po-hello/: README.md  pyproject.toml
examples/scaffold/po-hello/evals/greeter/: README.md  cases.yaml  rubrics.yaml
examples/scaffold/po-hello/overlay/: CLAUDE-po-hello.md
examples/scaffold/po-hello/po_hello/: __init__.py  commands.py  greeter_agent.py  hello_task_formula.py
examples/scaffold/po-hello/po_hello/agents/greeter/: prompt.md
examples/scaffold/po-hello/skills/hello/: SKILL.md
examples/scaffold/po-hello/skills/hello/evals/: cases.yaml  rubrics.yaml
k8s/: anthropic-api-key.example.yaml  claude-context-overrides.example.yaml  claude-oauth-pvc.example.yaml  claude-oauth.example.yaml  po-base-job-template.json  po-rig-pvc.yaml  po-worker-deployment.yaml
packs/: README.md
packs/po-formulas-cloud-rclaude/: pyproject.toml
packs/po-formulas-cloud-rclaude/overlay/: CLAUDE-cloud-rclaude.md
packs/po-formulas-cloud-rclaude/po_formulas_cloud_rclaude/: __init__.py  driver.py
packs/po-formulas-examples/: README.md  pyproject.toml
packs/po-formulas-examples/po_example_formulas/: __init__.py  deployments.py  flows.py  state.py
packs/po-formulas-retro/: README.md  pyproject.toml
packs/po-formulas-retro/po_formulas_retro/: __init__.py  deployments.py  flows.py
packs/po-formulas-retro/tests/: test_deployments.py  test_reflection_flow.py
po-stripe/: .gitignore  README.md
po_formulas/: __init__.py  mail.py  mail_prompt.md
prefect_orchestration/: __init__.py  account.py  agent_session.py  agent_step.py  artifact_contract.py  artifacts.py  attach.py  auth_rotation.py  backend_select.py  beads_backend.py  beads_meta.py  cancel.py  capacity.py  cli.py  commands.py  context_bundle.py  deployments.py  diff_mapper.py  doctor.py  env.py  env_dispatch.py  env_drivers.py  formulas.py  goal_loop.py  identity.py  iter_bead_ids.py  model_selection.py  pack_overlay.py  packs.py  parsing.py  prompt_formula.py  reconcile.py  resume.py  retry.py  role_artifacts.py  role_config.py  role_registry.py  role_sessions.py  run_handles.py  run_lookup.py  (+23 more)
scripts/: install.sh  scheduled-po-fix.sh  smoke-compose.sh  sync-claude-context.sh
setup/: migrate-dolt-to-br.sh  migrate_jsonl_ids.py
skills/: SKILL.md
tests/: _fixtures.py  conftest.py  test_account.py  test_agent_session.py  test_agent_session_effort.py  test_agent_session_mail.py  test_agent_session_overlay.py  test_agent_session_rate_limit.py  test_agent_session_resume_b9q.py  test_agent_session_secrets.py  test_agent_session_stop_hook.py  test_agent_session_telemetry.py  test_agent_session_tmux.py  test_agent_session_verdict_nudge.py  test_agent_session_wedge_nfs.py  test_agent_session_wedge_sav1.py  test_agent_step.py  test_artifact_contract.py  test_attach.py  test_auth_rotation.py  test_backend_select.py  test_beads_backend.py  test_beads_graph.py  test_beads_meta.py  test_beads_meta_cwd.py  test_beads_watch.py  test_br_no_raw_bd.py  test_cancel.py  test_cli_artifacts.py  test_cli_attach.py  test_cli_commands.py  test_cli_cron.py  test_cli_dispatch_tracker.py  test_cli_dry_run.py  test_cli_durable_default.py  test_cli_logs.py  test_cli_packs.py  test_cli_run_from_file.py  test_cli_run_param_filter.py  test_cli_run_runtime_flags.py  (+59 more)
tui/: .gitignore  CLAUDE.md  README.md  package.json  tsconfig.json
(+286 files in other folders)
