[project]
name = "prefect-orchestration"
version = "0.2.0"
description = "Pluggable Prefect-based orchestration for Claude Code CLI agents. Formula packs ship separately."
requires-python = ">=3.11"
dependencies = [
    "prefect>=3.0",
    "pydantic>=2",
    "typer>=0.12",
    "rich>=13",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
logfire = ["logfire>=3.0"]
otel = [
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp-proto-http>=1.25",
]
# Pulled in for unit tests so an in-memory exporter can be used without network.
dev = [
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
]
# Pulls in pydantic-evals (and pydantic-ai transitively) for the skill-evals
# formula. Optional so the core install stays lean — soft-imported in
# prefect_orchestration/skill_evals.py with a friendly install hint.
evals = ["pydantic-evals>=0.1"]

[project.scripts]
po = "prefect_orchestration.cli:main"

# Built-in formulas shipped with core. Pack-installed formulas can register
# additional entry points and will be merged into `po list`.
[project.entry-points."po.formulas"]
prompt = "prefect_orchestration.prompt_formula:prompt_run"
skill-evals = "prefect_orchestration.skill_evals:skill_evals"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["prefect_orchestration"]

# Scope pytest collection to the core's tests/. Without this, pytest's
# default recursive collection would pick up po-stripe/tests/ (and any
# future in-tree pack tests/), causing double-runs and cross-pack
# import errors when the pack isn't installed in the rig's venv.
[tool.pytest.ini_options]
testpaths = ["tests"]
