[project]
name = "prefect-orchestration"
version = "0.2.0"
description = "Pluggable Prefect-based orchestration for Claude Code CLI agents. Formula packs ship separately."
requires-python = ">=3.11"
dependencies = [
    "prefect>=3.0",
    "pydantic>=2",
    "typer>=0.12",
    "rich>=13",
    "pyyaml>=6.0",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
logfire = ["logfire>=3.0"]
otel = [
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp-proto-http>=1.25",
]
# Pulled in for unit tests so an in-memory exporter can be used without network.
dev = [
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    # Required to run the @pytest.mark.asyncio tests (scheduling, deployments,
    # doctor, …). Without it those tests error with "Unknown pytest.mark.asyncio"
    # and silently don't execute.
    "pytest-asyncio>=0.23",
]
# Skill-evals judge backends:
#   - claude-code (default): uses claude-agent-sdk over OAuth (Claude.ai sub).
#   - pydantic-evals (opt-in): pydantic-evals.LLMJudge over a provider API key.
# Both are optional so the core install stays lean — soft-imported in
# prefect_orchestration/skill_evals.py with friendly install hints.
evals = ["claude-agent-sdk>=0.1", "pydantic-evals>=0.1"]

[project.scripts]
po = "prefect_orchestration.cli:main"

# Built-in formulas shipped with core. Pack-installed formulas can register
# additional entry points and will be merged into `po list`.
[project.entry-points."po.formulas"]
agent-step = "prefect_orchestration.formulas:agent_step_flow"
prompt = "prefect_orchestration.prompt_formula:prompt_run"
goal-loop = "prefect_orchestration.goal_loop:goal_loop"
skill-evals = "prefect_orchestration.skill_evals:skill_evals"

# Pack-contributed `po doctor` checks. The `po` skill ships from core, so
# its eval-freshness check lives here (not in a sibling pack).
[project.entry-points."po.doctor_checks"]
po-skill-evals-fresh = "prefect_orchestration.skill_evals_doctor:po_skill_evals_fresh"

# Core utility commands dispatched as `po <command>` (not `po run`). `po new`
# scaffolds PO artifacts (pack / formula / skill / agent) — pure transport.
[project.entry-points."po.commands"]
new = "prefect_orchestration.scaffold:new"

# Skills shipped at the dist root (next to pyproject.toml). Hatchling's
# wheel target only packages the importable Python module by default;
# include the skills/ tree explicitly so wheel installs (not just
# editable installs) resolve `--pack prefect-orchestration --skill po`.
[tool.hatch.build.targets.wheel.force-include]
"skills" = "skills"
# Ensure non-.py prompt files under prefect_orchestration/agents/ ship in
# the wheel. Hatchling's package-discovery is .py-centric; force-include
# guarantees `render_template(_AGENTS_DIR, ...)` works after a wheel install.
"prefect_orchestration/agents" = "prefect_orchestration/agents"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["prefect_orchestration"]

# Scope pytest collection to the core's tests/. Without this, pytest's
# default recursive collection would pick up po-stripe/tests/ (and any
# future in-tree pack tests/), causing double-runs and cross-pack
# import errors when the pack isn't installed in the rig's venv.
[tool.pytest.ini_options]
testpaths = ["tests"]
# Tests mark async cases with @pytest.mark.asyncio (strict mode). Requires the
# pytest-asyncio dev dependency.
asyncio_mode = "strict"
