[project]
name = "po-formulas-examples"
version = "0.1.0"
description = "po example formula pack: standing-order and event-driven sample flows"
requires-python = ">=3.11"
dependencies = [
    "prefect-orchestration",
    "prefect>=3.0",
]

[project.entry-points."po.formulas"]
builder-heartbeat = "po_example_formulas.flows:builder_heartbeat"
triage-inbox = "po_example_formulas.flows:triage_inbox"
on-bd-close = "po_example_formulas.flows:on_bd_close"

[project.entry-points."po.deployments"]
example-formulas = "po_example_formulas.deployments:register"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["po_example_formulas"]

[tool.uv.sources]
prefect-orchestration = { path = "../..", editable = true }
