[project]
name = "po-formulas-retro"
version = "0.1.0"
description = "po formula pack: scheduled retrospectives over prior PO run artifacts"
requires-python = ">=3.11"
dependencies = [
    "prefect-orchestration",
    "prefect>=3.0",
]

[project.entry-points."po.formulas"]
update-prompts-from-lessons = "po_formulas_retro.flows:update_prompts_from_lessons"

[project.entry-points."po.deployments"]
retro-formulas = "po_formulas_retro.deployments:register"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["po_formulas_retro"]

[tool.uv.sources]
prefect-orchestration = { path = "../..", editable = true }
