[project]
name = "po-stripe"
version = "0.1.0"
description = "po tool pack: Stripe — CLI-first commands, doctor checks, and a Claude Code skill"
requires-python = ">=3.11"
dependencies = [
    "prefect-orchestration",
    "stripe>=9.0",
]

# Pack-shipped utility ops dispatched as `po <command>` (NOT `po run`).
# Each shells out to the `stripe` CLI binary; agents read SKILL.md to learn
# the rest of the surface area.
[project.entry-points."po.commands"]
stripe-balance = "po_stripe.commands:balance"
stripe-recent  = "po_stripe.commands:recent_charges"
stripe-mode    = "po_stripe.commands:mode"

# Health checks surfaced by `po doctor`.
[project.entry-points."po.doctor_checks"]
stripe-cli-installed = "po_stripe.checks:cli_installed"
stripe-env           = "po_stripe.checks:env_set"
stripe-api           = "po_stripe.checks:api_reachable"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["po_stripe"]
# Ship skills/ and overlay/ inside the wheel so the pack-convention
# wheel-layout probe (<dist-root>/{skills,overlay}/) finds them on
# non-editable installs.
include = ["skills", "overlay"]

# Develop alongside in-tree core (one directory up):
#   po install --editable po-stripe
[tool.uv.sources]
prefect-orchestration = { path = "..", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
]
