[project]
name = "po-hello"
version = "0.1.0"
description = "po pack: po-hello"
requires-python = ">=3.11"
dependencies = [
    "prefect-orchestration",
]

# Pack-shipped utility ops dispatched as `po <command>` (NOT `po run`).
# Add more with `po new ...` or by hand.
[project.entry-points."po.commands"]
po-hello-ping = "po_hello.commands:ping"

# @flow pipelines dispatched as `po run <formula>`. Add with
# `po new formula <name> --pack .` from this dir.
# [project.entry-points."po.formulas"]

# Health checks surfaced by `po doctor`.
# [project.entry-points."po.doctor_checks"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["po_hello"]
# Ship skills/ and overlay/ inside the wheel so non-editable installs find
# them (the pack-convention wheel-layout probe looks at <dist-root>/{skills,overlay}/).
include = ["skills", "overlay"]

[project.entry-points."po.formulas"]
greeter-agent = "po_hello.greeter_agent:greeter_agent"
hello-task = "po_hello.hello_task_formula:hello_task"
